# ghost-watch

./: .gitignore  CMakeLists.txt  ghost-watch.service  ghost-watch.spec
.copr/: Makefile
src/: dashboard.cpp  db.hpp  main.cpp  theme.hpp
